--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="nav">
                 <div class="wrapper">
                     <ul class="menu">
-                        <li><a href="#">Главная</a> </li>
+                        <li clacc="active"><a href="#">Главная</a> </li>
                         <li> <a href="#"> Магазины</a></li>
                         <li> <a href="#"> Советы покупателю</a></li>
                         <li> <a href="#"> Новости</a></li>
@@ -69,7 +69,6 @@
             </div>
         </div>
         <!-- *майн -->
-        <div class="main">
             <div class="wrapper">
                 <div class="column_one">
                     <div class="bottom_green">
@@ -299,12 +298,9 @@
                                 </div>
                             </div>
                             <div class="a_end">
-                                <div class="start">
-                                    <a href="#">вперёд</a>
-                                </div>
-                                <div class="adress">
-                                    <ul>
-                                        <li><a href="#">1</a></li>
+                                    <a class="start" href="#">вперёд</a>
+                                    <ul class="adress">
+                                        <li class="action"><a href="#">1</a></li>
                                         <li><a href="#">2</a></li>
                                         <li><a href="#">3</a></li>
                                         <li><a href="#">4</a></li>
@@ -314,10 +310,7 @@
                                         <li><a href="#">26</a></li>
                                         <li><a href="#">27</a></li>
                                     </ul>
-                                </div>
-                                <div class="end">
-                                    <a href="#">назад</a>
-                                </div>
+                                    <a class="end" href="#">назад</a>
                             </div>
                         </div>
 
@@ -389,13 +382,12 @@
                 </div>
             </div>
 
-        </div>
+        
         <div class="footer">
-
             <div class="nav">
                 <div class="wrapper">
                     <ul class="menu">
-                        <li class="first"><a href="#">Главная</a> </li>
+                        <li class="active"><a href="#">Главная</a> </li>
                         <li> <a href="#"> Магазины</a></li>
                         <li> <a href="#"> Советы покупателю</a></li>
                         <li> <a href="#"> Новости</a></li>
